# HeartRate

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-ui-enhancement-data-export/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-core-statistics-analytics/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-advanced-analytics-exercise-tracking/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: index.html  lib.rs  main.rs
src-tauri/src/alert/: mod.rs  notifier.rs
src-tauri/src/ble/: device.rs  heart_rate.rs  manager.rs  mod.rs
src-tauri/src/commands/: handlers.rs  mod.rs
src-tauri/src/storage/: database.rs  mod.rs
src/routes/: +layout.svelte  +page.svelte
(+25 files in other folders)
