[package]
name = "health-tracker"
version = "0.1.0"
description = "Heart Rate Monitor Desktop Application"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
btleplug = "0.11"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
anyhow = "1"
thiserror = "1"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
log = "0.4"
env_logger = "0.11"

[profile.release]
strip = true
lto = true
